--- a/docs/省市区选择组件.md
+++ b/docs/省市区选择组件.md
@@ -1,6 +1,6 @@
 > 此组件使用`picker`组件组合而成，使用的省市区数据为网上找到的json数据，也可以根据自己需要修改成从接口获取数据。
 
-[demo](https://j-y-h.github.io/ua-components/dist/build/h5/index.html)
+[demo](https://j-y-h.github.io/ua-components/dist/build/h5/#/pages/region/region)
 
 
 
